# accion

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  meson.build
.github/workflows/: build.yaml  msvc.yaml
src/: galton_board.c  galton_board.h  main.c
